# JOB_HUNT

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  ats_scoring_agent.py  base_agent.py  cover_letter_agent.py  dedup_agent.py  interview_agent.py  jd_analysis_agent.py  recruiter_agent.py  relevance_agent.py  resume_agent.py  scraper_agent.py  skill_gap_agent.py
config/: __init__.py  companies.py  profile.py  settings.py
knowledge/: achievements.json  certifications.json  master_resume.json  projects.json  skills.json
resume/: __init__.py  generator.py
scrapers/: __init__.py  ashby_scraper.py  base_scraper.py  career_source_detector.py  course5_scraper.py  cutshort_scraper.py  exl_scraper.py  foundit_scraper.py  fractal_scraper.py  gramener_scraper.py  greenhouse_scraper.py  hirist_scraper.py  indeed_scraper.py  instahyre_scraper.py  internshala_scraper.py  latentview_scraper.py  lever_scraper.py  musigma_scraper.py  naukri_scraper.py  nielseniq_scraper.py  quantiphi_scraper.py  smartrecruiters_scraper.py  talentd_scraper.py  tiger_scraper.py  tredence_scraper.py  wellfound_scraper.py  workday_scraper.py
scratch/: naukri_page.html  test_naukri.py  test_new_scrapers.py
sheets/: __init__.py  client.py
telegram_bot/: __init__.py  bot.py  notifier.py
tests/: test_agents.py  test_course5.py  test_cutshort_scraper.py  test_exl.py  test_foundit_scraper.py  test_fractal.py  test_gramener.py  test_internshala_scraper.py  test_latentview.py  test_musigma.py  test_naukri_scraper.py  test_nielseniq.py  (+6 more)
(+10 files in other folders)
