[project]
name = "ai-job-hunter"
version = "3.0.0"
description = "Fully automated, zero-cost AI-powered job hunting system"
requires-python = ">=3.11"
authors = [
    { name = "Yash Pal" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
